# -snapped_ros2_pkg

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: snap.yaml
launch/: snapped.launch.py
snap/: snapcraft.yaml
snapped_ros2_pkg/: CMakeLists.txt  package.xml
snapped_ros2_pkg/config/: config.yaml
